--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.0",
-    "nodemon": "^2.0.12"
-  },
-  "devDependencies": {
+    "nodemon": "^2.0.12",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
-  }
+  },
+  "devDependencies": {}
 }
