--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "팀 LC 천사식당 프로젝트 서버",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prestart": "next build",
     "start": "nodemon ."
   },
   "repository": {
